# tradedesk

./: .env.example  .gitignore  AGENTS.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: STRATEGY_GUIDE.md  backtesting_guide.md  indicator_guide.md  strategy_guide.md
docs/examples/: gbpusd_ticks.csv  ig_smoke_trade.py  log_price_strategy.py  momentum_strategy.py
examples/: eurusd_ticks.csv  log_price_strategy.py  momentum.py  momentum_strategy.py
tests/: conftest.py  test_backtest_csv.py  test_backtest_provider.py  test_client.py  test_client_historical_candles.py  test_ig_client_history.py  test_ig_client_retry_logic.py  test_ig_streamer_emits_events.py  test_indicator_warmup_period.py  test_indicators.py  test_runner.py  test_strategy.py  test_strategy_chart_priming.py  test_strategy_event_dispatch.py  test_strategy_run_streaming.py  test_strategy_warmup_from_ig.py
tests/indicators/: test_adx.py  test_atr.py  test_bollinger_bands.py  test_cci.py  test_ema.py  test_indicators.py  test_obv.py  test_rsi.py  test_sma.py  test_stochastic.py  test_vwap.py  test_warmup_period.py
tests/providers/: test_backtest_reporting.py  test_client.py  test_ig_client_history.py  test_ig_client_retry_logic.py  test_ig_config.py  test_ig_streamer_emits_events.py
tests/strategies/: test_event_dispatch.py  test_on_candle_update_default.py  test_run_streaming.py  test_strategy.py  test_warmup.py  test_warmup_from_history.py  test_warmup_plan.py
tradedesk/: __init__.py  chartdata.py  client.py  config.py  marketdata.py  runner.py  strategy.py  subscriptions.py
tradedesk/indicators/: __init__.py  adx.py  atr.py  base.py  bollinger_bands.py  cci.py  ema.py  macd.py  mfi.py  obv.py  rsi.py  sma.py  stochastic.py  vwap.py  williams_r.py
tradedesk/providers/: __init__.py  base.py
tradedesk/providers/backtest/: client.py  reporting.py  streamer.py
tradedesk/providers/ig/: __init__.py  client.py  settings.py  streamer.py
