[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradedesk"
version = "0.1.0"
description = "Trading infrastructure library for IG Markets"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Darren Davison", email = "darren@davisononline.org"}
]
dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31",
    "lightstreamer-client-lib>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tradedesk*"]
exclude = ["tests*", "examples*"]
