[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tradedesk"
version = "0.1.0"
authors = [
  { name = "Radius Red Ltd.", email = "opensource@radiusred.co.uk" }
]
maintainers = [
  { name = "Radius Red Ltd.", email = "opensource@radiusred.co.uk" }
]
description = "Trading infrastructure library with backtesting"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*", "NOTICE*"]
dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31",
    "lightstreamer-client-lib>=2.0",
    "python-dotenv>=1.0",
    "numpy>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0",
]

[project.urls]
Homepage = "https://github.com/radiusred"
Repository = "https://github.com/radiusred/tradedesk"
Issues = "https://github.com/radiusred/tradedesk/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tradedesk"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = ["tradedesk"]
